# CameraApp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Kconfig  README.md  README_zh.md  SConstruct  config_defaults.mk  linux_x86_cross_cp0_config_defaults.mk  package_deb.sh
.github/workflows/: release.yml
assets/applications/: camera.desktop
assets/fonts/: License.txt
cmake/: cm0-package.cmake
cmake/templates/: camera_app.desktop.in
cmake/toolchains/: cp0-aarch64-linux-gnu.cmake
config/: lv_conf_cm0.h  lv_conf_desktop.h
include/app/: app_action.h  app_state.h  app_state_machine.h
include/input/: linux_keypad.h  sdl_keypad.h
include/screens/: screen.h  screen_manager.h
include/services/: app_services.h  audio_service.h  base_service.h  camera_service.h  gallery_service.h
include/ui/: app_color.h  app_font.h  app_style.h  app_subject.h
include/utils/: asset_manager.h  json_helper.h  logger.h
include/viewmodels/: base_viewmodel.h  camera_viewmodel.h  gallery_viewmodel.h  splash_viewmodel.h
include/views/: base_view.h  camera_view.h  gallery_view.h  splash_view.h
src/: main.cpp
src/app/: app_action.h  app_state.h  app_state_machine.h
src/config/: lv_conf_cm0.h  lv_conf_desktop.h
src/input/: linux_keypad.cpp  linux_keypad.h  sdl_keypad.cpp  sdl_keypad.h
src/screens/: screen.h  screen_manager.h
src/services/: app_services.h  audio_service.cpp  audio_service.h  base_service.h  camera_backend_utils.cpp  camera_backend_utils.h  camera_frame_pool.h  camera_interface.h  camera_service.cpp  camera_service.h  gallery_service.cpp  gallery_service.h  jpeg_metadata.cpp  jpeg_metadata.h  libcamera_backend.cpp  libcamera_backend.h  preview_frame_limiter.h  v4l2_backend.cpp  v4l2_backend.h  video_recorder.cpp  video_recorder.h
src/ui/: app_color.h  app_font.cpp  app_font.h  app_style.cpp  app_style.h  app_subject.h
src/utils/: asset_manager.cpp  asset_manager.h  device_config.cpp  device_config.h  json_helper.cpp  json_helper.h  logger.cpp  logger.h
src/viewmodels/: base_viewmodel.h  camera_viewmodel.cpp  camera_viewmodel.h  gallery_viewmodel.cpp  gallery_viewmodel.h  splash_viewmodel.cpp  splash_viewmodel.h
src/views/: base_view.h  camera_view.cpp  camera_view.h  gallery_view.cpp  gallery_view.h  splash_view.cpp  splash_view.h
tests/: camera_preview_test.cpp  core_tests.cpp  device_config_test.cpp
